header and tag established (not centered or correctly positioned), sidebar and post created, css styling started

--- a/main.css
+++ b/main.css
@@ -1,13 +1,84 @@
-.body {
-}
-
-img { 
-	max-width: 100%; }
+/*container*/
 
 .container {
-	width:617px;
-	left:0;
-	margin-left:auto;
-	margin-right:auto;
-	font-family: 'Open Sans', sans-serif; 
+	
+	margin: 0 auto;
+	font-family: 'Open Sans', sans-serif;
+	display: inline-block;
+	vertical-align: center;
+	width:1300px;
+}
+
+/*header*/
+
+header {
+	background-image: url("images/header.jpg");
+	height:523px;
+	text-align:center;
+	background-repeat: no-repeat;
+	width:100%;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+header h1 {
+	position: center;
+	text-transform: uppercase;
+	background-repeat:no-repeat;
+	height:523;
+	width:1300px;
+  text-decoration: bold;
+  font-weight:400;
+  font-size:100px;
+  color:white;
+  text-shadow: 1.5px 1.5px 1.5px ;
+  background-repeat:no-repeat;
+  margin-top: 225px;
+}
+
+h2 {
+	position:center;
+	font-weight:400;
+	color:black;
+	opacity:.5;
+	font-size: 18px;
+}
+
+
+/*post*/
+
+.post {
+	width:47.38461538461539%;
+	float:left;
+	margin-left: 12.615384615384615%;
+	margin-right:6.384615384615384%;
+}
+
+.post h1 {
+	font-family: 'Oswald', sans-serif;
+	text-transform:uppercase;
+	color:#083452;
+	font-size: 56px;
+
+}
+
+.post p {
+	color:#727A81;
+	font-size:;
+}
+
+/*sidebar*/
+
+.sidebar {
+	float:right;
+	width:21.384615384615387%;
+	margin-right: 12.615384615384615%;
+	vertical-align: center;
+	margin-top: 72px;
+
+
+}
+
+.bio {
+	text-align: center;
 }
